# muscle-analytics

./: .coverage  .env.template  .gitattributes  .gitignore  Dockerfile  Dockerfile.streamlit  LICENSE  Makefile  README.md  ROADMAP.md  debug_db_config.py  demo_features_export.csv  docker-compose.secure.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  scripts.ps1  setup_databases.py  test_config_fix.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docker/: docker-compose.yml  init.sql
examples/: demo_advanced_features.py  demo_api_complete.py  demo_deterministic_import.py  demo_duration_refactoring.py  demo_etl.py  demo_etl_complete.py  demo_improved_warnings.py  demo_progression_improvements.py  demo_secure_config.py  demo_security_features.py  deterministic_data_generator.py  sample_data.csv  sample_data.xml  test_deterministic_data.py
notebooks/: 01_EDA_general.ipynb  02_EDA_muscles_exercices.ipynb  03_EDA_temporel.ipynb  04_features_engineering.ipynb  README.md
scripts/: README.md  clean_project.py  run_api.py  setup_databases.py  test_api_docker.py
src/: __init__.py  database.py
src/api/: README.md  main.py  models.py  services.py
src/config/: database.py
src/dashboard/: __init__.py  app.py  config.py  utils.py
tests/: .env.test.template  conftest.py  test_api_endpoints.py  test_calculation_optimizations.py  test_config.py  test_csv_parser.py  test_dashboard_integration.py  test_env_config.py  test_etl_integration.py  test_features.py  test_features_fixed.py  test_muscle_parsing.py  test_normalization.py  test_progression_date_assignment.py  test_security_improvements.py  test_services_refactoring.py  test_services_refactoring_fixed.py  test_xml_parser.py
(+23 files in other folders)
